[project]
name = "daxglot"
version = "0"
description = ""
authors = [{ name = "Brook Patten", email = "brook.patten@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sqlglot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "isort>=5.13.2",
    "black>=24.3.0",
    "sqlfluff>=3.0.5",
    "pre-commit>=3.7.1",
]

[tool.sqlfluff.core]
templater = "placeholder"
dialect = "sparksql"
max_line_length = 150

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.references.special_chars]
quoted_identifiers_policy = "none"

[tool.sqlfluff.templater.placeholder]
param_style = "dollar"

[tool.isort]
profile = "black"
