[project]
name = "measures-api"
version = "0.1.0"
description = "FastAPI backend for browsing and collecting measurediff measure definitions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "measurediff",
    "pbi2dbr",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
measurediff = { path = "../../measurediff", editable = true }
pbi2dbr = { path = "../../pbi2dbr", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
